chore(.pre-commit-config): setup yamllint and tofutrivy and lint cloud_init.yaml file

--- a/cloud_init.yaml
+++ b/cloud_init.yaml
@@ -1,4 +1,4 @@
-#cloud-config
+---
 package_update: true
 package_upgrade: true
 
@@ -13,21 +13,21 @@ users:
 
 runcmd:
   - mkdir -p /var/www/frontend.lucamaggio.xyz
-  - cp -r /tmp/frontend-files/* /var/www/frontend.lucamaggio.xyz
-  - chown -R www-data:www-data /var/www/frontend.lucamaggio.xyz
-  - ln -sf /etc/nginx/sites-available/frontend.lucamaggio.xyz /etc/nginx/sites-enabled/
+  - cp -r /tmp/frontend-files/* /var/www/my.site.xyz
+  - chown -R www-data:www-data /var/www/my.site.xyz
+  - ln -sf /etc/nginx/sites-available/my.site.xyz /etc/nginx/sites-enabled/
   - cp -r /tmp/frontend-files/* /var/www/default
   - chown -R www-data:www-data /var/www/default
   - ln -sf /etc/nginx/sites-available/default /etc/nginx/sites-enabled/
   - systemctl reload nginx
 
 write_files:
-  - path: /etc/nginx/sites-available/frontend.lucamaggio.xyz
+  - path: /etc/nginx/sites-available/my.site.xyz
     content: |
       server {
-          listen 80; 
-          server_name frontend.lucamaggio.xyz;
-          root /var/www/frontend.lucamaggio.xyz;
+          listen 80;
+          server_name my.site.xyz;
+          root /var/www/my.site.xyz;
           index index.html;
           location / {
               try_files $uri $uri/ =404;
