--- a/configure_server/playbook.yaml
+++ b/configure_server/playbook.yaml
@@ -10,9 +10,9 @@
   become: true
   tasks:
     - name: Update and upgrade packages
-      apt:
-        update_cache: true
-        upgrade: true
+      ansible.builtin.package:
+        name: "*"
+        state: latest
 
     - name: Install nginx
       apt:
