--- a/configure_server/playbook.yaml
+++ b/configure_server/playbook.yaml
@@ -9,6 +9,10 @@
   hosts: frontend
   become: true
   tasks:
+    - name: Print the domain name
+      ansible.builtin.debug:
+        msg: "The domain name is {{ domain_name | default('example.com') }}"
+
     - name: Update and upgrade packages
       apt:
         update_cache: true
@@ -27,7 +31,7 @@
         group: www-data
         mode: '0755'
       loop:
-        - /var/www/frontend.lucamaggio.xyz
+        - /var/www/{{ domain_name | default('example.com') }}
         - /var/www/default
 
     - name: Create Nginx configuration files
@@ -47,7 +51,7 @@
     - name: Copy index page
       copy:
         src: "./conf/index.html"
-        dest: "/var/www/frontend.lucamaggio.xyz"
+        dest: "/var/www/{{ domain_name | default('example.com') }}"
         owner: www-data
         group: www-data
         mode: '0755'
