--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,30 @@
 # Local .terraform directories
-**/.terraform/*
-
+iac/**/.terraform/*
 # .tfstate files
-*.tfstate
-*.tfstate.*
+iac/*.tfstate
+iac/*.tfstate.*
 
 # Crash log files
-crash.log
-crash.*.log
+iac/crash.log
+iac/crash.*.log
 
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
 # password, private keys, and other secrets. These should not be part of version 
 # control as they are data points which are potentially sensitive and subject 
 # to change depending on the environment.
-*.tfvars
-*.tfvars.json
+iac/*.tfvars
+iac/*.tfvars.json
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
-override.tf
-override.tf.json
-*_override.tf
-*_override.tf.json
+iac/override.tf
+iac/override.tf.json
+iac/*_override.tf
+iac/*_override.tf.json
 
 # Ignore transient lock info files created by terraform apply
-.terraform.tfstate.lock.info
-.terraform.lock.hcl
+iac/.terraform.tfstate.lock.info
+iac/.terraform.lock.hcl
 
 # Include override files you do wish to add to version control using negated pattern
 # !example_override.tf
@@ -34,11 +33,8 @@ override.tf.json
 # example: *tfplan*
 
 # Ignore CLI configuration files
-.terraformrc
-terraform.rc
+iac/.terraformrc
+iac/terraform.rc
 
 # Ignore .ssh
-.ssh/
-
-configure_server/group_vars/**.yaml
-configure_server/group_vars/**.yml
+iac/.ssh/
